tests/NormalTests/paczka1/small_fuzzy/95958748.err
Error in line 6: DLWBlzQis S317 55,7
Error in line 9: qsAU A595 21,1
